2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Optimize refresh(), fixes #2612

2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add a sorted keyword, fixes #2611

2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Remove unnecessary on_column__clicked handler,
	fixes #2610

2006-05-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py: Add support for templates

2006-05-04  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: display locale specific information for float,
	decimal and currency datatypes. Fixes #2562

2006-05-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/dateentry.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/entry.py:
	Add validation for DateEntry widget

2006-04-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py (excepthook): Add an exception hook
	* tests/runuitests.py:
	* tests/test_ui.py:
	Integrate ui tests into trial, remove old runuitests script.

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/player.py:
	* tests/runuitest.py:
	* tests/ui/diary.py:
	* tests/ui/diary2.py:
	Add a couple of ui tests

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	* kiwi/ui/test/recorder.py:
	Improve logging, fix a bug in finish()

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/filechooser.py (ProxyFileChooserButton.__init__): 
	Immitate PyGTK implementation argument wise

	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/main.py:
	Add optional support for emission hook.

	* README (Kiwi): 
	Mention that PyGObject 2.10.0 is recommended for the UI test
	
2006-04-27  Johan Dahlin  <jdahlin@async.com.br>
