@@ -1,3 +1,14 @@
+2006-05-31  Johan Dahlin  <jdahlin@async.com.br>
+
+	* tests/test_datatypes.py (CurrencyTest.testFormatBR): Add a test 
+	and clean up locale handling in other tests.
+
+	* kiwi/datatypes.py (filter_locale): Add a monetary parameter, which
+	takes into account the monetary data.
+
+	* kiwi/datatypes.py (currency.__new__): 
+	Use filter_locale with monetary=True here, fixes #2632
+
 2006-05-24  David Cook  <dave@davidcook.org>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
